--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "~0.14.6",
     "react-dom": "~0.14.6",
     "react-addons-css-transition-group": "~0.14.6",
-    "webpack": "~1.12.12"
+    "webpack": "~1.12.12",
+    "react-addons-clone-with-props": "~0.14.6"
   },
   "devDependencies": {},
   "scripts": {
